		used password for the menu (Was only present in the setup).

	mbcico:
		Added Hydra zlib compressed data blocks using the idea of Alex
		Shakhaylo. This is experimental and looks compatible with
		mailers that don't support this option. The compression will
		transfer some files about twice as fast as without compression.
		Changed signal handlers to better detect broken TCP links.

	lang:
		Added language prompt 20.

	examples:
		Updated English and Spanish menus with the new door settings.
		Fixed some spelling errors in the Dutch templates.



v0.38.0		26-Dec-2002 - 03-Oct-2003

	upgrade:
		Note: if upgrading from a 0.37.8 or 0.37.9 development version,
		then no upgrade procedure is needed. All others read the next
		carefully!

		A bit tricky to upgrade and start using the new debug logfile,
                follow the next steps exactly!!
                1.  Download and install the source
                2.  Run "./configure"
                3.  Run "make" (and do not install yet)
                4.  Run "mbstat close"
                5.  Backup /opt/mbse/bin and /opt/mbse/etc.
                6.  Run "mbstat close"
                7.  Kill mbtask, mostly "kill `/sbin/pidoff mbtask`" will do.
                8.  Run (as root) "make install" to install the new software.
                9.  Make sure you are user mbse again.
                10. Start mbtask manual, "mbtask"
                11. Run "mbsetup", enter menu 1, exit, save and close.
                12. Wait one minute.
                13. Run "mbstat open"
                After this is done the first time, restarting mbtask can be
                done as usual by running the mbsed init script. If something
                doesn't work (you get socket errors), it is important that you
                kill mbtask during software versions swap. All software must
                be of the same build.
		Check settings menu 1.5.21 for maximum allowed logins.
		Check setting of menu 1.14.15.