@@ -25,6 +25,8 @@ v0.39.0		09-Oct-2003
 		mailers that don't support this option. The compression will
 		transfer some files about twice as fast as without compression.
 		Changed signal handlers to better detect broken TCP links.
+		Added logging to show compressed bytes and switched to compress
+		level 9 compression instead of 6.
 
 	lang:
 		Added language prompt 20.
